--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">SosApp</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">SOS-App-UI</string>
+    <string name="title_configuration">Configuration</string>
+    <string name="title_lastActivity">Last activity</string>
+    <string name="title_contacts">Contacts</string>
 </resources>
