"Simple configuration menu added"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
-
 <resources>
     <string name="app_name">SOS-App-UI</string>
     <string name="title_configuration">Configuration</string>
     <string name="title_currentActivity">Current activity</string>
     <string name="title_last_activity">Last activity</string>
+    <string name="title_activity_personal_data_panel">PersonalDataPanel</string>
+    <string name="title_activity_additional_settings_panel">AdditionalSettingsPanel</string>
 </resources>
