--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_last_activity">Last activity</string>
     <string name="title_activity_personal_data_panel">PersonalDataPanel</string>
     <string name="title_activity_additional_settings_panel">AdditionalSettingsPanel</string>
+    <string name="load_contacts_button">Load contacts</string>
 </resources>
