--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 
 <resources>
-    <string name="app_name">SOS-App-UI</string>
+    <string name="app_name">SOS-App</string>
     <string name="title_configuration">Configuration</string>
     <string name="title_currentActivity">Current activity</string>
     <string name="title_last_activity">Last activity</string>
