--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_last_activity">Last activity</string>
     <string name="title_activity_personal_data_panel">PersonalDataPanel</string>
     <string name="title_activity_additional_settings_panel">AdditionalSettingsPanel</string>
+    <string name="title_activity_message_panel">MessagePanel</string>
+    <string name="title_activity_warning_targets">WarningTargets</string>
 </resources>
