new configuration menu testing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_additional_settings_panel">AdditionalSettingsPanel</string>
     <string name="title_activity_message_panel">MessagePanel</string>
     <string name="title_activity_warning_targets">WarningTargets</string>
+    <string name="title_activity_main_configuration_menu">MainConfigurationMenu</string>
 </resources>
