--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="title_configuration">Configuration</string>
     <string name="title_currentActivity">Current activity</string>
     <string name="title_last_activity">Last activity</string>
-    <string name="title_activity_personal_data_panel">PersonalDataPanel</string>
-    <string name="title_activity_additional_settings_panel">AdditionalSettingsPanel</string>
-    <string name="title_activity_message_panel">MessagePanel</string>
-    <string name="title_activity_warning_targets">WarningTargets</string>
+    <string name="title_activity_personal_data_panel">Personal Data</string>
+    <string name="title_activity_additional_settings_panel">Permissions</string>
+    <string name="title_activity_message_panel">Message</string>
+    <string name="title_activity_warning_targets">Contacts</string>
     <string name="title_activity_main_configuration_menu">MainConfigurationMenu</string>
 </resources>
